Add more loopdieloops changes.